@@ -1,3 +1,8 @@
+2001-07-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_open.c: Seek back to zero after failed read,
+	before writing header.
+
 2001-07-18  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_ojpeg.c: updates from Scott.  Handles colors
